fix(TestRun): overflow issue

--- a/components/test-run-page/_style.scss
+++ b/components/test-run-page/_style.scss
@@ -32,6 +32,7 @@
 
 	&__sidebar {
 		order: 2;
+		overflow: hidden;
 
 		&::-webkit-scrollbar {
 			width: 2px;
